📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -17894,5 +17894,149 @@
         "published": "Wed, 17 Dec 2025 13:25:06 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46301696\">Comments</a>"
+    },
+    {
+        "id": "https://www.theverge.com/video/845486/2026-predictions-staff-picks-video",
+        "title": "We asked our staff for their 2026 predictions",
+        "link": "https://www.theverge.com/video/845486/2026-predictions-staff-picks-video",
+        "published": "2025-12-17T10:02:31-05:00",
+        "source": "The Verge",
+        "summary": "In all the chaos of 2025, The Verge was able to see through the fog and focus on the consumer technology that really made an impact this year: robot vacuums, thin foldable phones, experimental laptops, handheld gaming consoles, and of course, generative AI. You can watch our standout picks in our video here. All this [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/845526/fallout-season-2-discussion-theories",
+        "title": "Let\u2019s talk about Fallout season 2",
+        "link": "https://www.theverge.com/tech/845526/fallout-season-2-discussion-theories",
+        "published": "2025-12-17T10:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Years often go by between new seasons of big streaming shows - just ask fans of Severance or Stranger Things - but with Fallout the wait hasn't been so bad. The first season was a welcome surprise when it started streaming last April, managing to capture the series' distinctly playful take on the end of [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/845965/netflix-fifa-soccer-football-game-tv-delphi-interactive-world-cup",
+        "title": "Netflix&#8217;s next big TV game is FIFA soccer",
+        "link": "https://www.theverge.com/news/845965/netflix-fifa-soccer-football-game-tv-delphi-interactive-world-cup",
+        "published": "2025-12-17T10:00:00-05:00",
+        "source": "The Verge",
+        "summary": "The World Cup is happening next year, and Netflix and FIFA are working on a new soccer simulation game in celebration of the tournament. \"This summer, when the world gathers to celebrate the FIFA World Cup 2026, fans can play a newly reimagined FIFA football simulation game exclusively on Netflix Games,\" Netflix says. The new [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/846012/oneplus-15r-review-battery-camera-performance",
+        "title": "OnePlus 15R review: unbeatable battery life, beatable value",
+        "link": "https://www.theverge.com/tech/846012/oneplus-15r-review-battery-camera-performance",
+        "published": "2025-12-17T10:00:00-05:00",
+        "source": "The Verge",
+        "summary": "The OnePlus 15R's battery life is exceptional. It's a smidge better than the very impressive OnePlus 15's, and the 15R costs two hundred dollars less. So why am I having a hard time recommending it? Typically, OnePlus' R-series phone is a simplified, less-expensive follow-up to the main flagship - in this case, the OnePlus 15. [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/846201/rad-power-bikes-chapter-11-bankruptcy",
+        "title": "Rad Power Bikes files for bankruptcy protection",
+        "link": "https://www.theverge.com/news/846201/rad-power-bikes-chapter-11-bankruptcy",
+        "published": "2025-12-17T09:14:39-05:00",
+        "source": "The Verge",
+        "summary": "Rad Power Bikes, the once dominant electric bicycle brand in the US, filed for Chapter 11 bankruptcy protection this week as it seeks to sell of its company. The move comes less than a month after Rad Power said it could not afford to recall its older e-bike batteries that had been designated a fire [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/mobile/smartphones/oneplus-15r-review-a-165hz-display-and-big-battery-for-700-150000340.html?src=rss",
+        "title": "OnePlus 15R review: A 165Hz display and big battery for $700",
+        "link": "https://www.engadget.com/mobile/smartphones/oneplus-15r-review-a-165hz-display-and-big-battery-for-700-150000340.html?src=rss",
+        "published": "Wed, 17 Dec 2025 15:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>I know what you're thinking, didn't OnePlus release a new phone just last month? It did. A little over five weeks after the announcement of the <a class=\"link\" href=\"https://www.engadget.com/mobile/smartphones/oneplus-15-review-a-great-phone-if-photography-isnt-a-priority-143000489.html\" target=\"_blank\">OP15</a>, the company is back with the OnePlus 15R, a more affordable version of its new flagship that starts at $700 (or $200 less than its sibling). Off the top, this will be a shorter revie"
+    },
+    {
+        "id": "https://www.engadget.com/cybersecurity/vpn/how-a-vpn-works-and-why-you-should-care-143000250.html?src=rss",
+        "title": "How a VPN works (and why you should care)",
+        "link": "https://www.engadget.com/cybersecurity/vpn/how-a-vpn-works-and-why-you-should-care-143000250.html?src=rss",
+        "published": "Wed, 17 Dec 2025 14:30:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>The <a class=\"link\" href=\"https://www.engadget.com/cybersecurity/vpn/best-vpn-130004396.html\" target=\"_blank\">best VPNs</a> can make your online life more private with software that's convenient and cheap \u2014 <a class=\"link\" href=\"https://www.engadget.com/cybersecurity/vpn/best-free-vpn-120032818.html\" target=\"_blank\">sometimes even free</a>. While keeping your IP address invisible, you can use your VPN to explore streaming content from all over the world or (virtually) sneak into a sports even"
+    },
+    {
+        "id": "https://www.engadget.com/home/home-theater/samsung-will-show-off-its-expanded-micro-rgb-tv-series-at-ces-141716449.html?src=rss",
+        "title": "Samsung will show off its expanded Micro RGB TV series at CES",
+        "link": "https://www.engadget.com/home/home-theater/samsung-will-show-off-its-expanded-micro-rgb-tv-series-at-ces-141716449.html?src=rss",
+        "published": "Wed, 17 Dec 2025 14:17:16 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Last year at CES, Samsung <a href=\"https://www.engadget.com/home/home-theater/samsungs-new-29999-micro-rgb-tv-looks-ridiculously-good-194629549.html\">debuted</a> its first mainstream Micro RGB TV, a 115-inch model that surprised us with its rich, vivid colors and $30,000 price tag. Now, the company has <a href=\"https://news.samsung.com/global/samsung-expands-premium-micro-rgb-lineup-for-2026-with-new-sizes-and-advanced-features\">announced</a> that it will be showing off an entire lineup of Mi"
+    },
+    {
+        "id": "https://www.engadget.com/deals/the-samsung-p9-microsd-express-card-for-switch-2-drops-to-a-record-low-price-141947215.html?src=rss",
+        "title": "The Samsung P9 microSD Express card for Switch 2 drops to a record-low price",
+        "link": "https://www.engadget.com/deals/the-samsung-p9-microsd-express-card-for-switch-2-drops-to-a-record-low-price-141947215.html?src=rss",
+        "published": "Wed, 17 Dec 2025 14:05:37 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>The <a href=\"https://www.engadget.com/gaming/nintendo/nintendo-switch-2-review-more-of-what-you-love-120048430.html\">Nintendo Switch 2</a> was the console launch of the year, and if you got your hands on one at launch, you may now be thinking about expanding its storage. There weren't a ton of microSD Express cards on the market with the Switch 2 first came out, and while they are still not ubiquitous today, you have more options than you did earlier this year. One of the latest to come out i"
+    },
+    {
+        "id": "https://gizmodo.com/the-surprising-way-hurricanes-pump-carbon-into-the-air-and-life-into-the-ocean-2000700676",
+        "title": "The Surprising Way Hurricanes Pump Carbon Into the Air\u2014and Life Into the Ocean",
+        "link": "https://gizmodo.com/the-surprising-way-hurricanes-pump-carbon-into-the-air-and-life-into-the-ocean-2000700676",
+        "published": "Wed, 17 Dec 2025 14:45:05 +0000",
+        "source": "Gizmodo",
+        "summary": "New research shows that tropical cyclones leave behind more than death and destruction."
+    },
+    {
+        "id": "https://gizmodo.com/muppet-show-50th-anniversary-trailer-release-date-2000700757",
+        "title": "\u2018The Muppet Show\u2019 Returns for One Night Only Next February",
+        "link": "https://gizmodo.com/muppet-show-50th-anniversary-trailer-release-date-2000700757",
+        "published": "Wed, 17 Dec 2025 14:00:23 +0000",
+        "source": "Gizmodo",
+        "summary": "It's time to play the music; it's time to light the lights."
+    },
+    {
+        "id": "https://gizmodo.com/paul-mcgann-doctor-who-billie-piper-ai-set-pictures-2000700400",
+        "title": "Paul McGann Addresses Those Bizarre Rumors About a \u2018Doctor Who\u2019 Return",
+        "link": "https://gizmodo.com/paul-mcgann-doctor-who-billie-piper-ai-set-pictures-2000700400",
+        "published": "Wed, 17 Dec 2025 13:00:38 +0000",
+        "source": "Gizmodo",
+        "summary": "Plus, get a new look at Christopher Nolan's take on 'The Odyssey'."
+    },
+    {
+        "id": "https://mashable.com/article/where-to-preorder-pokemon-tcg-ascended-heroes",
+        "title": "Pok\u00e9mon TCG Ascended Heroes: Preorder guide, price, where to buy",
+        "link": "https://mashable.com/article/where-to-preorder-pokemon-tcg-ascended-heroes",
+        "published": "Wed, 17 Dec 2025 14:27:08 +0000",
+        "source": "Mashable",
+        "summary": "Pok\u00e9mon TCG's Ascended Heroes preorders could drop at any moment. Here's all the retailers you need to keep an eye on."
+    },
+    {
+        "id": "https://www.zdnet.com/article/oneplus-15r-official-launch/",
+        "title": "This $700 OnePlus phone just embarrassed my Samsung Galaxy S25 Ultra's battery",
+        "link": "https://www.zdnet.com/article/oneplus-15r-official-launch/",
+        "published": "Wed, 17 Dec 2025 15:01:07 GMT",
+        "source": "Latest news",
+        "summary": "The OnePlus 15R has launched with specs that outpace its closest competitors - and more expensive rivals."
+    },
+    {
+        "id": "https://www.zdnet.com/article/oneplus-pad-go-2-review/",
+        "title": "Why I reach for this budget Android tablet over my iPad for entertainment now",
+        "link": "https://www.zdnet.com/article/oneplus-pad-go-2-review/",
+        "published": "Wed, 17 Dec 2025 15:00:50 GMT",
+        "source": "Latest news",
+        "summary": "The OnePlus Pad Go 2 has officially launched, and my experience with it thus far has been mostly positive. Mostly."
+    },
+    {
+        "id": "https://www.zdnet.com/article/how-to-find-your-dark-web-data-without-google/",
+        "title": "5 ways to scour the dark web for your data after Google kills its free report",
+        "link": "https://www.zdnet.com/article/how-to-find-your-dark-web-data-without-google/",
+        "published": "Wed, 17 Dec 2025 14:56:00 GMT",
+        "source": "Latest news",
+        "summary": "Dark web scans are disappearing, but you can still monitor your data using these tools."
+    },
+    {
+        "id": "https://www.zdnet.com/article/reasons-to-not-use-router-usb-port/",
+        "title": "PC experts warn against using your router's USB port - here's what to do instead",
+        "link": "https://www.zdnet.com/article/reasons-to-not-use-router-usb-port/",
+        "published": "Wed, 17 Dec 2025 14:38:00 GMT",
+        "source": "Latest news",
+        "summary": "Your router's USB port is convenient, but it's unreliable and a potential security risk."
+    },
+    {
+        "id": "https://www.zdnet.com/article/chatgpt-5-2-images-update/",
+        "title": "I tested the new ChatGPT Images - it's a stunning improvement, and enormously fun",
+        "link": "https://www.zdnet.com/article/chatgpt-5-2-images-update/",
+        "published": "Wed, 17 Dec 2025 14:26:04 GMT",
+        "source": "Latest news",
+        "summary": "'Lights! Eggnog! Punching!' OpenAI just overhauled ChatGPT image generation, and the results surprised and delighted me."
     }
 ]
