📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -18038,5 +18038,237 @@
         "published": "Wed, 17 Dec 2025 14:26:04 GMT",
         "source": "Latest news",
         "summary": "'Lights! Eggnog! Punching!' OpenAI just overhauled ChatGPT image generation, and the results surprised and delighted me."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/17/radiant-nuclear-raises-300m-for-its-semi-sized-1-mw-reactor/",
+        "title": "Radiant Nuclear raises $300M for its semi-sized 1 MW reactor",
+        "link": "https://techcrunch.com/2025/12/17/radiant-nuclear-raises-300m-for-its-semi-sized-1-mw-reactor/",
+        "published": "Wed, 17 Dec 2025 16:07:49 +0000",
+        "source": "TechCrunch",
+        "summary": "Radiant Nuclear is developing a small modular reactor to replace diesel generators. The startup previously raised $165 million in May."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/17/google-launches-gemini-3-flash-makes-it-the-default-model-in-the-gemini-app/",
+        "title": "Google launches Gemini 3 Flash, makes it the default model in the Gemini app",
+        "link": "https://techcrunch.com/2025/12/17/google-launches-gemini-3-flash-makes-it-the-default-model-in-the-gemini-app/",
+        "published": "Wed, 17 Dec 2025 16:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Google is making Gemini 3 Flash the default model in the Gemini app and oAI model for Search"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/17/coursera-and-udemy-enter-a-merger-agreement-valued-at-around-2-5b/",
+        "title": "Coursera and Udemy enter a merger agreement valued at around $2.5B",
+        "link": "https://techcrunch.com/2025/12/17/coursera-and-udemy-enter-a-merger-agreement-valued-at-around-2-5b/",
+        "published": "Wed, 17 Dec 2025 15:58:22 +0000",
+        "source": "TechCrunch",
+        "summary": "Coursera and Udemy, two of the biggest names in online learning, are combining platforms next year."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/17/bluesky-launches-a-privacy-focused-find-friends-feature-without-invite-spam/",
+        "title": "Bluesky launches a privacy-focused \u2018find friends\u2019 feature without invite spam",
+        "link": "https://techcrunch.com/2025/12/17/bluesky-launches-a-privacy-focused-find-friends-feature-without-invite-spam/",
+        "published": "Wed, 17 Dec 2025 15:49:32 +0000",
+        "source": "TechCrunch",
+        "summary": "The Bluesky contact matching feature is opt-in and your data won't be used to spam your friends, the social network says."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/17/warner-bros-discovery-rejects-paramounts-hostile-bid-calls-offer-illusory/",
+        "title": "Warner Bros. Discovery rejects Paramount\u2019s hostile bid, calls offer \u2018illusory\u2019",
+        "link": "https://techcrunch.com/2025/12/17/warner-bros-discovery-rejects-paramounts-hostile-bid-calls-offer-illusory/",
+        "published": "Wed, 17 Dec 2025 15:30:22 +0000",
+        "source": "TechCrunch",
+        "summary": "Warner Bros. Discovery called Paramount's offer \"illusory\" and said that the company had misled shareholders about its financing."
+    },
+    {
+        "id": "https://www.theverge.com/23691498/best-garmin-smartwatch-fitness-tracker-wearables",
+        "title": "The best Garmin watches for training and everyday life",
+        "link": "https://www.theverge.com/23691498/best-garmin-smartwatch-fitness-tracker-wearables",
+        "published": "2025-12-17T11:08:15-05:00",
+        "source": "The Verge",
+        "summary": "Few brands are as synonymous with outdoor sports as Garmin. You\u2019ll find these fitness trackers and smartwatches on dozens of wrists at any 5K, marathon, or Ironman. You\u2019ll also find Garmin devotees among divers, thru-hikers, golfers, kiteboarders \u2014 you name it. But these devices aren\u2019t just for athletes. The company\u2019s made significant strides in its [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/845741/gemini-3-flash-google-ai-mode-launch",
+        "title": "Gemini 3 Flash is here, bringing a \u2018huge\u2019 upgrade to the Gemini app",
+        "link": "https://www.theverge.com/news/845741/gemini-3-flash-google-ai-mode-launch",
+        "published": "2025-12-17T11:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Google is upgrading its Gemini app with Gemini 3 Flash, a more efficient version of its flagship AI model that's still capable of fielding complex requests. The new model will replace Gemini 2.5 Flash as the default inside the Gemini app, and it's headed to Google Search, too. Its arrival comes one month after the [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/845831/ai-chips-data-center-power-water",
+        "title": "AI&#8217;s water and electricity use soars in 2025",
+        "link": "https://www.theverge.com/news/845831/ai-chips-data-center-power-water",
+        "published": "2025-12-17T11:00:00-05:00",
+        "source": "The Verge",
+        "summary": "AI created as much carbon pollution this year as New York City and guzzled up as much H20 as people consume globally in water bottles, according to new estimates. The study paints what's likely a pretty conservative picture of AI's environmental impact since it's based on the relatively limited amount of data that's currently available [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/846208/peacock-arrival-ads-launch-2026",
+        "title": "Peacock will bombard you with ads as soon as you open the app",
+        "link": "https://www.theverge.com/news/846208/peacock-arrival-ads-launch-2026",
+        "published": "2025-12-17T11:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Peacock has found a new place to stuff ads. Starting next year, the streaming service will greet you with an ad alongside your profile icon on the \"Who's watching?\" screen when you open the app. During a press briefing, Peacock parent company NBCUniversal showed off how these \"arrival ads\" might look. One image shows your [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/845979/switchbot-k11-robot-vacuum-hisense-u8qg-mini-led-tv-deal-sale",
+        "title": "SwitchBot\u2019s space-saving robot vacuum is on sale starting at just $179.99",
+        "link": "https://www.theverge.com/gadgets/845979/switchbot-k11-robot-vacuum-hisense-u8qg-mini-led-tv-deal-sale",
+        "published": "2025-12-17T10:45:04-05:00",
+        "source": "The Verge",
+        "summary": "Small robot vacuums that fit into tight spaces rarely deliver strong performance, which is what makes the SwitchBot K11 Plus stand out. And right now, you can purchase the compact yet capable robovac from Amazon and SwitchBot for a new low of $179.99 ($220 off), the latter with code XMAS2GIFT55. Just note that only Switchbot [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/the-most-powerful-politics-influencers-barely-post-about-politics/",
+        "title": "The Most Powerful Politics Influencers Barely Post About Politics",
+        "link": "https://www.wired.com/story/the-most-powerful-politics-influencers-barely-post-about-politics/",
+        "published": "Wed, 17 Dec 2025 16:00:00 +0000",
+        "source": "WIRED",
+        "summary": "New research shows that social media creators have enormous influence over their audiences' politics\u2014especially those who don't normally share political content."
+    },
+    {
+        "id": "https://arstechnica.com/security/2025/12/browser-extensions-with-8-million-users-collect-extended-ai-conversations/",
+        "title": "Browser extensions with 8 million users collect extended AI conversations",
+        "link": "https://arstechnica.com/security/2025/12/browser-extensions-with-8-million-users-collect-extended-ai-conversations/",
+        "published": "Wed, 17 Dec 2025 15:25:25 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "The extensions, available for Chromium browsers, harvest full AI conversations over months."
+    },
+    {
+        "id": "https://arstechnica.com/cars/2025/12/how-is-ev-technology-being-accepted-by-the-aftermarket/",
+        "title": "Electric vehicles cause tension in the automotive aftermarket",
+        "link": "https://arstechnica.com/cars/2025/12/how-is-ev-technology-being-accepted-by-the-aftermarket/",
+        "published": "Wed, 17 Dec 2025 15:09:03 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "At SEMA, we heard Trump-like talking points but saw skateboard chassis, too."
+    },
+    {
+        "id": "https://arstechnica.com/tech-policy/2025/12/twitter-comeback-bid-draws-lawsuit-from-elon-musks-x-corp/",
+        "title": "Twitter comeback bid draws lawsuit from Elon Musk\u2019s X Corp",
+        "link": "https://arstechnica.com/tech-policy/2025/12/twitter-comeback-bid-draws-lawsuit-from-elon-musks-x-corp/",
+        "published": "Wed, 17 Dec 2025 14:41:36 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "\u201cHuge uphill battle\u201d to obtain and use Twitter name."
+    },
+    {
+        "id": "https://www.engadget.com/ai/googles-gemini-3-flash-model-outperforms-gpt-52-in-some-benchmarks-160000000.html?src=rss",
+        "title": "Google's Gemini 3 Flash model outperforms GPT-5.2 in some benchmarks",
+        "link": "https://www.engadget.com/ai/googles-gemini-3-flash-model-outperforms-gpt-52-in-some-benchmarks-160000000.html?src=rss",
+        "published": "Wed, 17 Dec 2025 16:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Almost exactly a month after the <a class=\"link\" href=\"https://www.engadget.com/ai/googles-new-gemini-3-model-arrives-in-ai-mode-and-the-gemini-app-160054273.html\" target=\"_blank\">debut of Gemini 3 Pro</a> in November, Google has begun rolling out the more efficient Flash version of its latest AI model. According to the company, the new system offers similar &quot;pro-grade&quot; reasoning performance as its flagship model at a fraction of the cost, making it ideal for everyday use.&nbsp;</p>"
+    },
+    {
+        "id": "https://gizmodo.com/what-is-a-micro-rgb-tv-and-why-youre-gonna-see-them-everywhere-2000700764",
+        "title": "What Is a Micro RGB TV and Why You\u2019re Gonna See Them Everywhere",
+        "link": "https://gizmodo.com/what-is-a-micro-rgb-tv-and-why-youre-gonna-see-them-everywhere-2000700764",
+        "published": "Wed, 17 Dec 2025 16:12:12 +0000",
+        "source": "Gizmodo",
+        "summary": "Can the latest flavor of LCD screen technology finally beat OLED?"
+    },
+    {
+        "id": "https://gizmodo.com/james-cameron-avatar-3-last-one-termniator-2000700777",
+        "title": "James Cameron Wants to Start Doing Things That Aren\u2019t \u2018Avatar\u2019 Again",
+        "link": "https://gizmodo.com/james-cameron-avatar-3-last-one-termniator-2000700777",
+        "published": "Wed, 17 Dec 2025 16:00:34 +0000",
+        "source": "Gizmodo",
+        "summary": "Cameron has a plan that may involve fewer blue aliens and more 'Terminator' (without Schwarzenegger)."
+    },
+    {
+        "id": "https://gizmodo.com/researchers-tested-herpes-drugs-for-alzheimers-it-backfired-2000700360",
+        "title": "Researchers Tested Herpes Drugs for Alzheimer\u2019s. It Backfired",
+        "link": "https://gizmodo.com/researchers-tested-herpes-drugs-for-alzheimers-it-backfired-2000700360",
+        "published": "Wed, 17 Dec 2025 16:00:33 +0000",
+        "source": "Gizmodo",
+        "summary": "People given the herpes medication valacyclovir actually experienced worse cognitive decline than those given a placebo."
+    },
+    {
+        "id": "https://gizmodo.com/scientists-thought-saturns-moon-titan-hid-a-secret-ocean-they-were-wrong-2000700782",
+        "title": "Scientists Thought Saturn\u2019s Moon Titan Hid a Secret Ocean. They Were Wrong",
+        "link": "https://gizmodo.com/scientists-thought-saturns-moon-titan-hid-a-secret-ocean-they-were-wrong-2000700782",
+        "published": "Wed, 17 Dec 2025 16:00:24 +0000",
+        "source": "Gizmodo",
+        "summary": "For more than a decade, scientists have accepted that Titan, Saturn\u2019s biggest moon, has a subsurface ocean of liquid water. A new look at the data suggests otherwise."
+    },
+    {
+        "id": "https://mashable.com/article/dec-17-directv-holiday-flash-sale",
+        "title": "Stream sport for less over the holidays \u2014 get DirecTV for just $50 in first-ever flash sale",
+        "link": "https://mashable.com/article/dec-17-directv-holiday-flash-sale",
+        "published": "Wed, 17 Dec 2025 15:37:47 +0000",
+        "source": "Mashable",
+        "summary": "Get your first month of the DirecTV Signature Entertainment package for $50 through Jan. 6 in first-ever flash holiday sale."
+    },
+    {
+        "id": "https://mashable.com/gifts/best-gifts-for-pet-owners",
+        "title": "The best gifts for pets (and their parents): 35+ ideas that the internet and Mashable reporters stand by",
+        "link": "https://mashable.com/gifts/best-gifts-for-pet-owners",
+        "published": "Wed, 17 Dec 2025 15:33:56 +0000",
+        "source": "Mashable",
+        "summary": "Need Christmas gifts for a dog owner or cat owner? Here are 36 customer-backed ideas like useful gifts for dog owners, enticing cat beds, and unique pet toys."
+    },
+    {
+        "id": "https://mashable.com/ad/article/holiday-shopping-advice-from-peta-murgatroyd-and-maksim-chmerkovskiy",
+        "title": "Holiday tech gifts that\u2019ll get you a perfect score, curated by Peta and Maks",
+        "link": "https://mashable.com/ad/article/holiday-shopping-advice-from-peta-murgatroyd-and-maksim-chmerkovskiy",
+        "published": "Wed, 17 Dec 2025 15:31:15 +0000",
+        "source": "Mashable",
+        "summary": "Watch the 'Dancing with the Stars' champs and cutest couple ever roll out the tech they\u2019re obsessed with on Walmart Live."
+    },
+    {
+        "id": "https://mashable.com/article/dec-17-apple-m4-macbook-air-deal-13-inch",
+        "title": "Apples 13-inch M4 MacBook Air is back on sale for just $749 ahead of the holidays",
+        "link": "https://mashable.com/article/dec-17-apple-m4-macbook-air-deal-13-inch",
+        "published": "Wed, 17 Dec 2025 15:18:30 +0000",
+        "source": "Mashable",
+        "summary": "The 13-inch M4 Apple MacBook Air is on sale for just $749 at Amazon and Best Buy (or $250 off). That's a record-low price for most of its colorways."
+    },
+    {
+        "id": "https://mashable.com/article/dec-17-kitchenaid-espresso-machine-deal",
+        "title": "Make professional drinks at home with $350 off the KitchenAid Espresso Machine",
+        "link": "https://mashable.com/article/dec-17-kitchenaid-espresso-machine-deal",
+        "published": "Wed, 17 Dec 2025 15:06:08 +0000",
+        "source": "Mashable",
+        "summary": "Get the best coffee machine deal at Amazon. As of Dec. 17, get $350 off the KitchenAid Espresso Machine at Amazon."
+    },
+    {
+        "id": "https://readwrite.com/finnish-gambling-act-passed-market-opened-competition/",
+        "title": "Finnish Gambling Act is passed, with gambling market to be opened to competition",
+        "link": "https://readwrite.com/finnish-gambling-act-passed-market-opened-competition/",
+        "published": "Wed, 17 Dec 2025 15:31:51 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"A photograph of the Finnish flag with its distinctive blue Nordic cross on white background. Finland Approves Gambling Act, Opens Licensed Market\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/Finnish-Gambling-Act-is-passed-with-gambling-market-to-be-opened-to-competition-300x200.png\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>A new Gambling Act has been approved in Finl"
+    },
+    {
+        "id": "https://readwrite.com/bragg-gaming-expands-presence-brazil-blaze/",
+        "title": "Bragg Gaming expands presence in Brazil, with exclusive content live with Blaze",
+        "link": "https://readwrite.com/bragg-gaming-expands-presence-brazil-blaze/",
+        "published": "Wed, 17 Dec 2025 14:11:18 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"Bragg Gaming expands presence in Brazil, with exclusive content live with Blaze. Promotional graphic showing Bragg Gaming launching proprietary and exclusive iGaming content on the Blaze platform in Brazil, featuring the Blaze logo, Brazilian flag, Bragg logo, and illustrated game characters.\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/Bragg-Gaming-expands-presence-in-Brazil-with-exclusive-content-live-wit"
+    },
+    {
+        "id": "https://www.zdnet.com/article/google-maps-gemini-visual-update-local-search/",
+        "title": "Google Maps just got its biggest upgrade in years, and it changes how you navigate (for the better)",
+        "link": "https://www.zdnet.com/article/google-maps-gemini-visual-update-local-search/",
+        "published": "Wed, 17 Dec 2025 15:50:00 GMT",
+        "source": "Latest news",
+        "summary": "Goodbye walls of text. Hello, rich visual guides that help you decide faster."
+    },
+    {
+        "id": "https://www.zdnet.com/article/bose-quietcomfort-ultra-gen-2-review/",
+        "title": "I thought Bose had perfected noise canceling - then I listened to these headphones",
+        "link": "https://www.zdnet.com/article/bose-quietcomfort-ultra-gen-2-review/",
+        "published": "Wed, 17 Dec 2025 15:47:00 GMT",
+        "source": "Latest news",
+        "summary": "With the latest QuietComfort Ultra 2, Bose is refining all the aspects it has already excelled at."
+    },
+    {
+        "id": "https://www.zdnet.com/article/soundcore-sleep-a30-earbuds-review/",
+        "title": "Do sleep earbuds actually work? This pair that I tested for weeks made the answer clear",
+        "link": "https://www.zdnet.com/article/soundcore-sleep-a30-earbuds-review/",
+        "published": "Wed, 17 Dec 2025 15:37:00 GMT",
+        "source": "Latest news",
+        "summary": "Soundcore's latest A30 sleep earbuds promise active noise cancellation in a small and lightweight form factor."
     }
 ]
